test/netlist/error/unknown-block.bop
A(a) = b
where
  b = Unknown(a);
end where;
